Actualización y reorden de Proyecto
Se realizaron cambios a nivel de paquetes para llevar un orden

--- a/Desafio2/nbproject/project.properties
+++ b/Desafio2/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=desafio2.Desafio2Frame
+main.class=PK_UI.Desafio2Frame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
