--- a/Desafio2/nbproject/private/private.properties
+++ b/Desafio2/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Program Files\\NetBeans 8.2 RC
-user.properties.file=C:\\Users\\amgoo\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\luisf\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
